[gd_scene load_steps=4 format=3 uid="uid://b5aq7rwrg1xvm"]

[ext_resource type="Script" uid="uid://dfcgcgsmp126l" path="res://GUI/HUD.gd" id="1_2vknh"]

[sub_resource type="Gradient" id="Gradient_xdgpj"]
offsets = PackedFloat32Array(0, 0.535948, 1)
colors = PackedColorArray(0.57, 0, 0.228, 1, 1, 0.883333, 0, 1, 0.32, 1, 0.410667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qcxp"]
bg_color = Color(0, 0, 0, 0.12549)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vknh")
fps_gradient = SubResource("Gradient_xdgpj")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "FPS: "

[node name="DroneStats" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -118.0
offset_right = 34.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5qcxp")

[node name="VboxContainer" type="VBoxContainer" parent="DroneStats"]
layout_mode = 2

[node name="VelocityLabel" type="Label" parent="DroneStats/VboxContainer"]
layout_mode = 2
text = "velocity: "

[node name="ThrustLabel" type="Label" parent="DroneStats/VboxContainer"]
layout_mode = 2
text = "thrust: "

[node name="DragLabel" type="Label" parent="DroneStats/VboxContainer"]
layout_mode = 2
text = "drag: "

[node name="AlphaLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_right = 166.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.20392157, 1)
text = "Alpha Version: Not representative of final product"
